2006-04-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (global_program_unref),
	(add_to_module_list), (gnome_program_class_init),
	(gnome_program_instance_init), (gnome_program_finalize),
	(gnome_program_locate_file), (gnome_program_parse_args),
	(gnome_program_init_common): Fix leaks. (Christian Persch)
	Closes bug #335741.

======================== 2.14.0 =============================

2006-03-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Release 2.14.0.

2006-03-09  Subhransu Behera <sbehera@redhat.com>

	* configure.in: "or" is added to ALL_LINGUS

2006-02-15  Christian Persch  <chpe@cvs.gnome.org>

        * libgnome/gnome-program.c: (gnome_program_preinit): revert to only
	using GOption if explicitly requested, since otherwise the popt
	context isn't created, which breaks ABI in case anyone tries to use
	it.
		
2006-02-12  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* libgnome/gnome-url.c: (gnome_url_show_with_env): Add handling of 
	GNOME_VFS_ERROR_INVALID_URI error and a user readable message
	(Fixes #327754).

2006-02-12  Vincent Untz  <vuntz@gnome.org>

	Use GOption instead of popt by default
	
	* libgnome/gnome-program.c: (gnome_program_preinit): use GOption by
	default if the program does not specify any help data

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-init.c: (gnome_bonobo_module_info_get),
	(gnome_bonobo_activation_module_info_get),
	(gnome_vfs_module_info_get), (libgnome_module_info_get):
	Initialise all members of the GnomeModuleInfo structs.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, NEWS: release 2.13.7.

	* libgnome/gnome-program.h: non-conditionally include popt.h

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, NEWS: release 2.13.6.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgnome/gnome-init.c: (gnome_bonobo_activation_module_info_get),
	(libgnome_module_info_get):