@@ -992,22 +992,9 @@ gnome_program_locate_file (GnomeProgram *program, GnomeFileDomain domain,
 	search_path = FALSE;
 	break;
     case GNOME_FILE_DOMAIN_APP_HELP:
-	len = strlen ("/share/gnome/help/") + 
-		strlen (program->_priv->app_id) + 1;
-	prefix_rel = g_alloca (len);
-	if (prefix_rel == NULL /* bad things */)
-		return NULL;
-	g_snprintf (prefix_rel, len, "/share/gnome/help/%s", program->_priv->app_id);
-
+	prefix_rel = "/share/gnome/help";
 	attr_name = GNOME_PARAM_APP_DATADIR;
-
-	len = strlen ("/gnome/help/") + 
-		strlen (program->_priv->app_id) + 1;
-	attr_rel = g_alloca (len);
-	if (attr_rel == NULL /* bad things */)
-		return NULL;
-	g_snprintf (attr_rel, len, "/gnome/help/%s", program->_priv->app_id);
-
+	attr_rel = "/gnome/help";
 	search_path = FALSE;
 	break;
     default:
